@@ -2,13 +2,11 @@ package com.example.demo.turfbooking.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -17,23 +15,31 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Add all frontend URLs you want to allow here
-        config.setAllowedOriginPatterns(Arrays.asList(
-            "https://turf-booking-seven.vercel.app",   // your current frontend domain
-            "https://turf-booking-frontend.vercel.app",
-            "https://turf-booking-an7sfm399-monishs-projects-29844c66.vercel.app",
-            "http://localhost:3000"
+        // ✅ Allowed Frontend URLs
+        config.setAllowedOriginPatterns(List.of(
+                "https://turf-booking-seven.vercel.app",   
+                "https://turf-booking-frontend.vercel.app", 
+                "https://turf-booking-an7sfm399-monishs-projects-29844c66.vercel.app",
+                "http://localhost:3000"
         ));
 
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // ✅ Allowed HTTP Methods
+        config.setAllowedMethods(List.of(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
 
-        config.setAllowedHeaders(Arrays.asList("*"));
+        // ✅ Allowed Headers
+        config.setAllowedHeaders(List.of(
+                "Authorization", "Cache-Control", "Content-Type"
+        ));
 
+        // ✅ Allow credentials (important for JWT cookies / session)
         config.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // ✅ Reduce preflight requests
+        config.setMaxAge(3600L);
 
-        // Apply CORS config to all paths
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
         return source;
